<resources>
    <string name="app_name">AndroidFilippov</string>

    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_entry_form">Подписка</string>
    <string name="title_activity_endless_transition">Просмотр фото</string>
    <string name="title_activity_check_box">CheckBox</string>
    <string name="title_activity_spinner">Spinner</string>
    <string name="title_activity_calendar_view">CalendarView</string>
    <string name="title_activity_shared_preferences_notes">Записная книжка</string>
    <string name="title_activity_app_bar">AppBar</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_calc">Калькулятор</string>
    <string name="title_activity_change_language">ChangeLanguage</string>

    <string name="splash_screen_desc">image</string>

    <string name="username">Имя пользователя</string>
    <string name="email">Электронная почта</string>
    <string name="ok">ОК</string>
    <string name="clear">Очистить</string>
    <string name="result"> </string>

    <string name="back">Назад</string>
    <string name="forward">Вперёд</string>
    <string name="randomImage"> </string>

    <string name="input_money">Ввод денег</string>
    <string name="input_info">Информация об оплате</string>
    <string name="bank_card_checkbox">С банковской карты</string>
    <string name="mobile_phone_checkbox">С мобильного телефона</string>
    <string name="cash_address_checkbox">Наличными по адресу</string>

    <string name="show_address">Показать адрес</string>
    <string-array name="countries">
        <item>Россия</item>
        <item>Украина</item>
        <item>Белоруссия</item>
    </string-array>
    <string-array name="r_cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Казань</item>
    </string-array>
    <string-array name="u_cities">
        <item>Киев</item>
        <item>Одесса</item>
        <item>Харьков</item>
    </string-array>
    <string-array name="b_cities">
        <item>Минск</item>
        <item>Гомель</item>
        <item>Торжок</item>
    </string-array>

    <string name="choose_start_date">Дата-время старта задачи:</string>
    <string name="choose_end_date">Дата-время окончания задачи:</string>

    <string name="save">Сохранить</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="cancel">C</string>
    <string name="plus_minus">±</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="multiply">X</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>

    <string name="letterF">F</string>
    <string name="letterI">I</string>
    <string name="letterL">L</string>
    <string name="letterP">P</string>
    <string name="letterO">O</string>
    <string name="letterV">V</string>

    <string name="change_mode">Change</string>
    <string name="deg">deg</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="lg">lg</string>
    <string name="ln">ln</string>
    <string name="pi">pi</string>
    <string name="second_value">2nd</string>
    <string name="sqrt">√</string>
    <string name="integral">int</string>
    <string name="e">e</string>
    <string name="rad">rad</string>

    <string name="change_language_text">Hello world!</string>
    <string-array name="change_language">
        <item>Russian</item>
        <item>English</item>
    </string-array>

    <string-array name="selection_color">
        <item>Black</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>

    <string-array name="selection_margin">
        <item>Margin1</item>
        <item>Margin2</item>
        <item>Margin3</item>
    </string-array>

</resources>
