<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AppBarActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_first_activity"
        android:orderInCategory="100"
        android:title="@string/title_activity_first"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_splash_screen_activity"
        android:orderInCategory="100"
        android:title="@string/title_activity_splash_screen"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_entry_form_activity"
        android:orderInCategory="100"
        android:title="@string/title_activity_entry_form"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_endless_transition_activity"
        android:orderInCategory="100"
        android:title="@string/title_activity_endless_transition"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_check_box_activity"
        android:orderInCategory="100"
        android:title="@string/title_activity_check_box"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_spinner_activity"
        android:orderInCategory="100"
        android:title="@string/title_activity_spinner"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calendar_view_activity"
        android:orderInCategory="100"
        android:title="@string/title_activity_calendar_view"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_shared_preferences_notes_activity"
        android:orderInCategory="100"
        android:title="@string/title_activity_shared_preferences_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calc_activity"
        android:orderInCategory="100"
        android:title="@string/title_activity_calc"
        app:showAsAction="never" />
</menu>